--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "vant": "^2.5.5",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
@@ -20,6 +22,7 @@
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "node-sass": "^4.12.0",
